# gazer

./: CMakeLists.txt  README.md
src/: application.cpp  application.h  global.cpp  global.h  main.cpp
src/actors/collector/: collector.cpp  collector.h
src/actors/data/: data.cpp  data.h
src/actors/http/: httpserver.cpp  httpserver.h  statistic.h
src/common/: logging.h
src/config/: appconfig.h  config.cpp  config.h
support/: config.json  config_example.json  requirements.sh
support/docker/: Dockerfile  docker_deploy.sh  make_docker_image.sh
